# prediction-tracker

./: .env.example  .gitignore  .pre-commit-config.yaml  KALSHI_QUICK_START.md  PREDICTION_MARKETS_GUIDE.md  README.md  alembic.ini  cat_loss.db  cat_loss_dashboard.html  cat_loss_database.py  newsletter_charts.py  prediction_market_scraper.py  prediction_market_scraper_v2.py  pyproject.toml  render.yaml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 08a85c41589f_add_storm_forecast_carrier_exposure_cat_.py  8d441cfd3559_create_cat_losses_table.py  c1e2a8f3d4b5_add_storm_observations_table.py  e7f9b2c6d1a3_add_forecast_storm_issued_unique.py  f8a3c5d2e6b7_add_ticker_quotes_table.py
docs/: beta_testing_plan.md  launch_checklist.md  post_event_loss_estimates_memo.md
scripts/: audit_prediction_markets.py  build_og_png.py  monitor_forecastex.py  probe_cxmarkets.py  probe_forecastex.py  probe_kalshi.py  probe_polymarket.py  seed.py
scripts/legacy/: README.md  cat_loss_database.py  kalshi_authenticated_scraper.py  kalshi_dashboard.html  kalshi_newsletter_charts.py  kalshi_weather_scraper_v3.py  kalshi_weather_scraper_v4.py  newsletter_charts.py  prediction_market_analyzer.py  prediction_market_scraper.py  prediction_market_scraper_v2.py  sec_cat_loss_scraper.py
src/rmn_dashboard/: __init__.py  config.py  database.py  main.py  scheduler.py
src/rmn_dashboard/data/: __init__.py  analogs.py  cat_loss_estimates.yaml  cat_losses.py  heat_map.py  historical_analogs.yaml  hurricane_universe.yaml  prediction_market_questions.yaml  universe.py
src/rmn_dashboard/dev/: __init__.py  seed_ian.py  seed_irma.py  seed_quotes.py
src/rmn_dashboard/models/: __init__.py  base.py  carrier_exposure.py  cat_bond_quote.py  cat_loss.py  daily_snapshot.py  forecast.py  prediction_market.py  storm.py  storm_observation.py  ticker_quote.py
src/rmn_dashboard/routes/: __init__.py  api.py
src/rmn_dashboard/scrapers/: __init__.py  kalshi.py  nhc.py  nhc_shapefiles.py  polymarket.py  yfinance_quotes.py
src/rmn_dashboard/services/: __init__.py  cat_losses.py  count_curve.py  daily_changes.py  equity_quotes.py  forecasts.py  heat_map.py  historical_analogs.py  markets.py  signal_tape.py  test_signal_tape_service.py
src/rmn_dashboard/static/js/: forecast_map.js  panel_analogs.js  panel_cat_bonds.js  panel_cat_losses.js  panel_changes.js  panel_count_curve.js  panel_equities.js  panel_heat_map.js  panel_landfall.js  panel_landfall_odds.js  panel_risk_capital.js  signal_tape.js
src/rmn_dashboard/tasks/: __init__.py  ingest_kalshi.py  ingest_nhc.py  ingest_nhc_forecasts.py  ingest_polymarket.py  ingest_yfinance.py
src/rmn_dashboard/templates/: base.html  embed_signal_tape.html  index.html
src/rmn_dashboard/utils/: __init__.py
tests/: conftest.py  test_analogs_loader.py  test_api_forecasts.py  test_api_quotes.py  test_cat_losses_loader.py  test_cat_losses_service.py  test_count_curve_service.py  test_daily_changes_service.py  test_database.py  test_equity_quotes_service.py  test_heat_map_loader.py  test_heat_map_service.py  test_historical_analogs_service.py  test_ingest_kalshi.py  test_ingest_nhc.py  test_ingest_nhc_forecasts.py  test_ingest_polymarket.py  test_ingest_yfinance.py  test_kalshi.py  test_markets_service.py  test_models.py  test_nhc.py  test_nhc_shapefiles.py  test_polymarket.py  test_routes.py  test_scheduler.py  test_seed_ian.py  test_seed_irma.py  test_seed_quotes.py  test_signal_tape_service.py  test_universe.py  test_yfinance_quotes.py
tests/fixtures/: nhc_current_storms.json  sample_cat_losses.json
