[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rmn-dashboard"
version = "0.1.0"
description = "Risk Market News hurricane dashboard — translating how hurricane risk is priced, in plain English."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [
    { name = "Chris Westfall", email = "christopher.westfall@gmail.com" },
]

dependencies = [
    # Web framework
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",

    # Database
    "sqlalchemy>=2.0",
    "alembic>=1.13",

    # Config / env
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "python-dotenv>=1.0",

    # HTTP + scraping
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "lxml>=5.1",

    # Scheduling
    "apscheduler>=3.10",

    # Charts / analysis
    "plotly>=5.20",
    "pandas>=2.2",

    # Auth signing (Kalshi RSA-PSS)
    "cryptography>=42",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",          # reused as test client dep
    "ruff>=0.3",
    "mypy>=1.9",
    "types-beautifulsoup4",
]
prod = [
    "psycopg[binary]>=3.1",
    "gunicorn>=21.2",
]

[project.urls]
Homepage = "https://riskmarketnews.com"
Repository = "https://github.com/ReallyNobody/prediction-tracker"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
rmn_dashboard = ["templates/**/*.html", "static/**/*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "C4"]
ignore = ["E501"]  # handled by formatter

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
