[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rmn-dashboard"
version = "0.1.0"
description = "Risk Market News hurricane dashboard — translating how hurricane risk is priced, in plain English."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [
    { name = "Chris Westfall", email = "christopher.westfall@gmail.com" },
]

dependencies = [
    # Web framework
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",

    # Database
    "sqlalchemy>=2.0",
    "alembic>=1.13",

    # Config / env
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "python-dotenv>=1.0",

    # HTTP + scraping
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "lxml>=5.1",
    # Pure-Python shapefile reader — pulled in for NHC forecastTrack and
    # wsp_120hr ZIPs. Deliberately chose pyshp over fiona/geopandas to
    # avoid pulling GDAL/GEOS C-lib wheels (Render build surface risk).
    # We hand-roll shp→GeoJSON because points + polygons are all we need.
    "pyshp>=2.3",

    # Scheduling
    "apscheduler>=3.10",

    # Charts / analysis
    "plotly>=5.20",
    "pandas>=2.2",

    # Auth signing (Kalshi RSA-PSS)
    "cryptography>=42",

    # YAML config (hurricane equity universe; possibly other curated lists later)
    "PyYAML>=6.0",

    # Yahoo Finance batch quote pulls for the Panel 2 equity ticker.
    # No API key required; ~15-min delayed quotes. Yahoo periodically
    # changes endpoints (~yearly), so plan to upgrade yfinance when
    # it does — track via the dep's release notes.
    "yfinance>=0.2.40",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",          # reused as test client dep
    "ruff>=0.3",
    "mypy>=1.9",
    "types-beautifulsoup4",
]
prod = [
    "psycopg[binary]>=3.1",
    "gunicorn>=21.2",
]

[project.urls]
Homepage = "https://riskmarketnews.com"
Repository = "https://github.com/ReallyNobody/prediction-tracker"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
rmn_dashboard = [
    "templates/**/*.html",
    "static/**/*",
    "data/*.yaml",
]

[tool.ruff]
line-length = 100
target-version = "py311"
# scripts/legacy/ holds archived prototype scripts — kept for reference
# while we port pieces into src/rmn_dashboard/ingest/ over Weeks 2-4.
# Not worth lint-churning code we're rewriting.
extend-exclude = ["scripts/legacy"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "C4"]
ignore = ["E501"]  # handled by formatter

[tool.ruff.lint.per-file-ignores]
# Alembic env.py has to manipulate sys.path before importing the package,
# which intentionally puts non-stdlib imports below code.
"alembic/env.py" = ["E402"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI's DI pattern relies on Depends()/Query()/etc. as argument defaults;
# that's not the B008 footgun (mutable default) — these return descriptors,
# not mutable values. Whitelist them so B008 doesn't fight the framework.
extend-immutable-calls = [
    "fastapi.Depends",
    "fastapi.Query",
    "fastapi.Path",
    "fastapi.Body",
    "fastapi.Header",
    "fastapi.Cookie",
    "fastapi.File",
    "fastapi.Form",
]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
